# matchbot

./: .gitignore  .gitmodules  README.md  bot.py  bot_commands.py  bot_update.sh  bot_util.py  classes.py  database-draft.py  database.db  docker-compose.yml  get5.py  github_actions_on_srcf.md  leaderboard_data.txt  menus.py  requirements.txt  setup.cfg  tournabot.db  util.py
.github/: python-app.yml
api/: Dockerfile  api.py  database.py  game.py  run.py
cogs/: __init__.py  channels.py  database.py  leaderboard.py  lobby.py  match.py  pickems.py  users.py
commands/: hello.py  leaderboard.py  match.py  result.py
data/: autodelete.txt  channelmap.txt  leaderboard.txt
database/: __init__.py  (+5 more)
package/: setup.cfg
package/matchbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
package/matchbot/databasemanager/: __init__.py
package/matchbot/discordbot/: __init__.py  usercog.py
package/matchbot/gameservermanager/: __init__.py
package/matchbot_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: setup.cfg
src/matchbot/: __init__.py  database.py  demo.py  log.py  manager.py  redis.py
src/matchbot/api/: __init__.py  main.py  matches.py  models.py  servers.py  teams.py  user.py  users.py
src/matchbot/apps/: __init__.py  api.py  demo.py  matchstarter.py  rcon.py
src/matchbot/database/: __init__.py  functions.py  gameserver.py  match.py  matches.py  models.py  servers.py  servertokens.py  team.py  teams.py  user.py  users.py
src/matchbot/databasemanager/: __init__.py
src/matchbot/gameserver/: __init__.py
src/matchbot/gameservermanager/: __init__.py  gameserver.py
(+60 files in other folders)
