[metadata]
name = matchbot
version = 0.0.1
description = Dynamically deploy servers for competitive CS:GO matches 
long_description = file: README.md
url = https://github.com/theo-brown/matchbot
author = Theo Brown
author_email = theo.brown.uk@gmail.com
license = GNU GPLv3
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3

[options]
packages = matchbot
install_requires =
    asyncio
    aiodocker
    asyncpg
    aioredis
    fastapi
    sqlalchemy
    uvicorn
